@@ -1,3 +1,5 @@
+* Optimize ObjectRange by caching its range values on the first use of "_each". [jddalton]
+
 * Optimize Enumerable methods by replacing calls to "each" with "_each" and change aliases to mimic ones set by the Array extensions. [jddalton]
 
 * unit test: Enusre String#sub does not freeze when passed an empty pattern. [jddalton]
